<resources>
    <string name="app_name">FILM</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_live">Kênh truyền hình</string>
    <string name="nav_item_tvshow">TV Show</string>
    <string name="nav_item_film">Film</string>
    <string name="nav_item_video_joker">Video Hài</string>
    <string name="nav_sub_menu">Hỗ trợ</string>
    <string name="nav_sub_menu_imfomation">Thông tin</string>
    <string name="nav_sub_menu_fb">Facebook</string>
    <string name="nav_sub_menu_share">Chia sẻ</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Second Activity Text</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="hint_search">Search</string>

    <!--/cardview-->

    <string name="action_add_favourite">Add to Favorites</string>
    <string name="action_play_next">Play next</string>
    <string name="backdrop_title">Love Music</string>
    <string name="backdrop_subtitle">This season to 20 albums</string>

</resources>
