<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:icon="@drawable/ic_live_tv_white_48dp"
            android:title="@string/nav_item_live" />
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@drawable/ic_slideshow_white_48dp"
            android:title="@string/nav_item_tvshow" />
        <item
            android:id="@+id/navigation_item_location"
            android:icon="@drawable/ic_switch_video_white_48dp"
            android:title="@string/nav_item_film" />
        <item
            android:id="@+id/navigation_item_video_joker"
            android:icon="@drawable/ic_ondemand_video_white_48dp"
            android:title="@string/nav_item_video_joker" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/info_48"
                    android:title="@string/nav_sub_menu_imfomation" />
                <item
                    android:icon="@drawable/facebook_48"
                    android:title="@string/nav_sub_menu_fb" />
                <item
                    android:icon="@drawable/share_48"
                    android:title="@string/nav_sub_menu_share" />
            </group>
        </menu>
    </item>

</menu>